fix bug width overflow in about school page

--- a/src/pages/main/school_history/SchoolHistory.module.scss
+++ b/src/pages/main/school_history/SchoolHistory.module.scss
@@ -8,6 +8,9 @@
     padding: 40px 0 60px 0;
   }
 }
+.title{
+  margin-bottom: 1rem
+}
 .imgWrapper {
   @extend%aligncenter;
   flex-direction: column;
